test/parser/Queries/syntax_errors/fail_K-ForExprWithout-12.xq
(foo:********* $ **foo* let ********* eq * for * ne ******************* $ * let ***********:)
(:  K-ForExprWithout-12            let           foo      :) $ 
(: Written by: Frans  for Englich  ne      let       $    ne               for   :)
 let (: Date: 2006-10-05T18:29:37+02:00         let  for                :)
(:  for Purpose: A test whose essence  `4 eq for $foo in1,  in 2, $moo infoo  return 4)`. :)
(:****************** for ***** for ********************* where ******:)
4 eq (for $ in 1, $bar in 2, $moo in 3 return 4)